--- a/index.html
+++ b/index.html
@@ -9,59 +9,75 @@
     <link rel="stylesheet" href="phphome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@700&family=Roboto+Mono:wght@200;300;600;700&family=Space+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@700&family=Roboto+Mono:wght@200;300;600;700&family=Source+Code+Pro&family=Space+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <style>
 
-<body>
-    <div class="parent">
-        <div class="head">
-            <h1><b>The Road to PHP 8.1</b></h1>
+    </style>
+
+    <body>
+        <div class="parent">
+            <div class="head font-weight">
+                <h1>My First Website</h1>
+            </div>
+            <div class="para">
+                <h2>I m Archan.This is my first website hosted with github.I made this only with HTML5 and CSS3.You can enter your name below and can also enter false email id as you wont getting any mails.</h2>
+
+            </div>
         </div>
-        <div class="para">
-            <h2>Join almost 4000 people on the road to PHP 8.1: a 10-day newsletter to get you up to speed about what's new in PHP 8.1</h2>
+
+        <div class="parentofinput">
+            <form action="#" novalidate>
+                <div class="grid">
+                    <div class="phone-input">
+                        <p class="Name">Your name</p>
+                        <p class="Email">Email</p>
+                    </div>
+                    <p class="input name bg-color ">Your name</p>
+                    <p class="input email bg-color">Email</p>
+
+                    <br>
+                    <div class="input-commom-phone">
+                        <input class="input-bar name-phone" type="text">
+                        <input type="email" class="displayinline input-bar email-phone  ">
+                    </div>
+                </div>
+
+                <a class="submit" href="subscribephp.html">subscribe</a>
+
+                <h3 class="not-mail">You will not get any mail if you will enter your original email id. You can also write this "hello@gmail.com" to submit.</h3>
+            </form>
+        </div>
+
 
         </div>
-    </div>
-
-    <div class="name-parent">
-        <div class="name-input">
-            <label class="name">Your Name</label>
         </div>
-        <input class="input-name padding" type="text" required>
 
-        <br>
-        <br>
-
-        <label class="name email">Email</label>
-        <input class="input-name" type="email" required>
-        <br>
-        <br>
-        <div class="subscribe">
-            <ul><a class="sub" href="subscribephp.html">subscribe</ul></a>
+        <div class="last-para">
+            <p>You can Follow my <a class="twitter1" href="https://twitter.com/archan_rd">Twitter</a> and <a class="linked1" href="https://www.linkedin.com/feed/"> LinkedIn</a> Account by clicking on this Bold texted and also you can get the buttons on the
+                bottom of the page</p>
         </div>
-        <div class="small-para">
-            <p>No mail will be sent to your email, you cant type an example email too (hello@gmail.com)</p>
+        <div>
+
+            <center>
+                <a href="https://road-to-php.com/">
+                    <button class="stitcher">Check the official Website</button>
+                </a>
+            </center>
+            <center>
+
+                <a href="https://twitter.com/archan_rd">
+                    <button class="twitter">Twitter</button>
+                </a>
+
+
+                <a href="https://www.linkedin.com/feed/">
+                    <button class="linked">LinkedIn</button>
+                </a>
+            </center>
+
         </div>
-    </div>
 
-    <div class="last-para">
-        <p><b>Not an email-type of person?</b> You can read <a class="book-link" href="https://front-line-php.com/">book on modern day PHP</a> instead! It covers everything from PHP 7 and 8, as well as best-practices, patterns, OOP and more! I'm currently
-            still working on adding chapters for PHP 8.1.</p>
-    </div>
-    <div>
-        <center>
-            <a href="https://stitcher.io/">
-                <button class="stitcher">© 2021 stitcher.io</button>
-            </a>
-        </center>
-        <center>
-            <a href="https://road-to-php.com/">
-                <button class="stitcher">Check the official Website</button>
-            </a>
-        </center>
-    </div>
-    </div>
 
-</body>
+    </body>
 
 </html>
