--- a/subscribephp.html
+++ b/subscribephp.html
@@ -11,11 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@700&family=Roboto+Mono:wght@200;300;600;700&family=Space+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
-<style>
-    body {
-        background-image: url(img.jpg);
-    }
-</style>
+
 
 <body>
 
@@ -24,27 +20,34 @@
 
     <div class="parent">
         <div class="head">
-            <h1><b>The Road to PHP 8.1</b></h1>
+            <h1><b>Greetings From Archan</b></h1>
         </div>
         <div class="para">
             <h2>Thank you for subscribing! You won't get any mail for subscribing. This is just a clone website made for practice. Thanks for reviewing it.</h2>
 
-            <div class="credits">
-                <p>Reference taken from
-                    <a class="road" href="https://road-to-php.com/">Road to PHP 8.1</a>
-                </p>
-            </div>
+
         </div>
     </div>
 
     </div>
     <div>
         <center>
-            <a href="https://stitcher.io/">
-                <button class="stitcher">© 2021 stitcher.io</button>
+            <a href="index.html">
+                <button class="stitcher">GO to Home Page</button>
             </a>
         </center>
     </div>
+    <center>
+
+        <a href="https://twitter.com/archan_rd">
+            <button class="twitter">Twitter</button>
+        </a>
+
+
+        <a href="https://www.linkedin.com/feed/">
+            <button class="linked">LinkedIn</button>
+        </a>
+    </center>
 
 
 
