--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <div class="last-para">
-            <p>You can Follow my <a class="twitter1" href="https://twitter.com/archan_rd">Twitter</a> and <a class="linked1" href="https://www.linkedin.com/feed/"> LinkedIn</a> Account by clicking on this Bold texted and also you can get the buttons on the
-                bottom of the page</p>
+            <p>You can Follow my <a class="twitter1" href="https://twitter.com/archan_rd">Twitter</a> and <a class="linked1" href="https://www.linkedin.com/in/archan-rd-ba67a0227/"> LinkedIn</a> Account by clicking on this Bold texted and also you can get
+                the buttons on the bottom of the page</p>
         </div>
         <div>
 
@@ -70,7 +70,7 @@
                 </a>
 
 
-                <a href="https://www.linkedin.com/feed/">
+                <a href="https://www.linkedin.com/in/archan-rd-ba67a0227/">
                     <button class="linked">LinkedIn</button>
                 </a>
             </center>
