--- a/subscribephp.html
+++ b/subscribephp.html
@@ -23,7 +23,7 @@
             <h1><b>Greetings From Archan</b></h1>
         </div>
         <div class="para">
-            <h2>Thank you for subscribing! You won't get any mail for subscribing. This is just a clone website made for practice. Thanks for reviewing it.</h2>
+            <h2 class="h2"> Thank you for subscribing! You won't get any mail for subscribing. This is just a clone website made for practice. Thanks for reviewing it.</h2>
 
 
         </div>
@@ -44,7 +44,7 @@
         </a>
 
 
-        <a href="https://www.linkedin.com/feed/">
+        <a href="https://twitter.com/archan_rd">
             <button class="linked">LinkedIn</button>
         </a>
     </center>
